--- a/DAY2 TASK/style.css
+++ b/DAY2 TASK/style.css
@@ -5,47 +5,20 @@
     font: arial, sans-serif;
     line-height: 30px;
 }
-.mainhead{
-    text-align: center;
-    padding: 20px;
-    background-color: red;
-    position: sticky;
-}
+
 
 h1{
-    border: 2px solid white;
-    border-radius: 15px;
+    
     display: inline-block;
     padding: 10px 20px;
     top: 0;
     left: 0;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -ms-border-radius: 15px;
-    -o-border-radius: 15px;
+    
 }
 
-.mainhead p{
-    margin-top: 20px;
-    background-color: white;
-}
-
-.aboutme{
-    text-align: center;
-    padding: 30px;
-}
-
-.aboutme h2{
-    margin-bottom: 20px;
-    color: orange;
-}
-
-.aboutme ul li{
-    list-style-type: none;
-    margin: 10px 0;
-}
-
+ 
 body{
+    padding: 20px;
     background-color: #f5f5f5;
 }
 
@@ -53,26 +26,22 @@ body{
     display: flex;
     gap: 30px;
     padding: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 20px ;
+ 
 }
 
 .card{
-    background-color: #ffffff;;
-    border-radius: 20px;
+    background-color: rgb(219, 215, 211);
     padding: 30px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
-    flex: 1;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    flex : 1;
+    border-radius: 20px;
+    box-shadow: 0 10px 8px rgba(0, 0, 0, 0.1);
 }
 
-.card h3{
-    margin-bottom: 15px;     
-}
 
+.card:hover{
+box-shadow: 1px 20px 20px rgba(0, 0, 0, 0.032);
+}
 form{
     display: flex;
     flex-direction: column;
@@ -82,5 +51,9 @@ form{
 @media screen and (max-width: 768px) {
     .card-container{
         flex-direction: column;
+        
+    }
+    .card{
+        background-color: azure;
     }
 }
