--- a/DAY2 TASK/style.css
+++ b/DAY2 TASK/style.css
@@ -2,8 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font: arial, sans-serif;
-    line-height: 30px;
+    
 }
 
 
@@ -11,15 +10,18 @@ h1{
     
     display: inline-block;
     padding: 10px 20px;
-    top: 0;
-    left: 0;
+    
     
 }
 
  
 body{
+    max-width: 1000px;
+    margin: 0 auto;
     padding: 20px;
     background-color: #f5f5f5;
+    font: arial, sans-serif;
+    line-height: 1.6;
 }
 
 .card-container{
