--- a/DAY3 TASK/style2.css
+++ b/DAY3 TASK/style2.css
@@ -1,24 +1,42 @@
-.grid-container {
-display: grid;
-grid-template-columns: repeat(2, 1fr);
-gap: 10px;
-padding: 20px;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
 }
 
-.box {
-    background-color: rgb(124, 172, 235);
-    border-radius: 10px;
-    text-align: center;
+body{
+    background-color: rgb(152, 217, 245);
+    max-width: 1000px;
+}
+
+.grid-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 20px;
     padding: 30px;
+    grid-auto-rows: minmax(200px,auto);
 }
 
-.box:hover {
-background-color: rgb(87, 167, 232);
-box-shadow: 1px 20px 20px rgba(0, 0, 0, 0.176);
+.box{
+    background-color: rgb(103, 178, 228);
+    text-align: center;
+    border-radius: 10px;
+    padding: 85px;
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2);
 }
 
+.box:hover{
+    background-color: rgb(91, 148, 240);
+    box-shadow: 0px 16px 24px rgba(0, 0, 0, 0.4);
+    color:whitesmoke;
+
+}
 @media screen and (max-width: 600px) {
     .grid-container{
         grid-template-columns: 1fr;
     }
 }
+
+
+
